--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-# SELENIUM CONFIG
+# SELENIUM CONFIG #
 selenium.browserDriver = webdriver.chrome.driver
 selenium.browserPath = /Users/leosilva/WebDriver/chromedriver
+# SELENIUM CONFIG #
 
 # INSTAGRAM XPATH
 ## LOGIN PAGE
 instagram.xpath.usernameField = //*[@id=\"loginForm\"]/div/div[1]/div/label/input
 instagram.xpath.passwordField = //*[@id=\"loginForm\"]/div/div[2]/div/label/input
 instagram.xpath.loginButton = //*[@id=\"loginForm\"]/div/div[3]/button
-
 ## PROFILE PAGE
 instagram.xpath.username = //*[@id="react-root"]/section/main/div/header/section/div[1]/h2
 instagram.xpath.followers = //*[@id="react-root"]/section/main/div/header/section/ul/li[2]/a/span
 instagram.xpath.following = //*[@id="react-root"]/section/main/div/header/section/ul/li[3]/a/span
+# INSTAGRAM XPATH
