Improvement and fix.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ instagram.xpath.loginButton = //*[@id=\"loginForm\"]/div/div[3]/button
 instagram.xpath.username = //*[@id="react-root"]/section/main/div/header/section/div[1]/h2
 instagram.xpath.followers = //*[@id="react-root"]/section/main/div/header/section/ul/li[2]/a/span
 instagram.xpath.following = //*[@id="react-root"]/section/main/div/header/section/ul/li[3]/a/span
+instagram.xpath.followingListBoxOpen = //*[@id=\"react-root\"]/section/main/div/header/section/ul/li[3]/a
+instagram.xpath.followingListBox = //div[@class='isgrP']
+instagram.xpath.userDataFromFollowingListXPath = //div[@class='isgrP']//li[$]
 # INSTAGRAM XPATH
