--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,8 @@ instagram.xpath.following = //*[@id="react-root"]/section/main/div/header/sectio
 instagram.xpath.followingListBoxOpen = //*[@id=\"react-root\"]/section/main/div/header/section/ul/li[3]/a
 instagram.xpath.followingListBox = //div[@class='isgrP']
 instagram.xpath.userDataFromFollowingListXPath = //div[@class='isgrP']//li[$]
+## POST PAGE
+instagram.xpath.commentButton = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/button
+instagram.xpath.commentTextArea = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/textarea
+instagram.xpath.postOwnerUsername = //*[@id="react-root"]/section/main/div/div[1]/article/header/div[2]/div[1]/div[1]/span/a
 # INSTAGRAM XPATH
