Application is now a RESTful API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-# SELENIUM CONFIG #
+server.port = 8080
+
+# ----- SELENIUM CONFIG ----- #
 selenium.browserDriver = webdriver.chrome.driver
 selenium.browserPath = /Users/leosilva/WebDriver/chromedriver
-# SELENIUM CONFIG #
+# ----- SELENIUM CONFIG ----- #
 
-# INSTAGRAM XPATH
+# ----- INSTAGRAM XPATH CONFIG ----- #
 ## LOGIN PAGE
 instagram.xpath.usernameField = //*[@id=\"loginForm\"]/div/div[1]/div/label/input
 instagram.xpath.passwordField = //*[@id=\"loginForm\"]/div/div[2]/div/label/input
@@ -19,4 +21,24 @@ instagram.xpath.userDataFromFollowingListXPath = //div[@class='isgrP']//li[$]
 instagram.xpath.commentButton = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/button
 instagram.xpath.commentTextArea = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/textarea
 instagram.xpath.postOwnerUsername = //*[@id="react-root"]/section/main/div/div[1]/article/header/div[2]/div[1]/div[1]/span/a
-# INSTAGRAM XPATH
+# ----- INSTAGRAM XPATH CONFIG ----- #
+
+# ----- SPRING CONFIG ----- #
+## DATASOURCE
+spring.datasource.url=jdbc:h2:mem:instagramscrapper
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=leo
+spring.datasource.password=leo
+## JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+## H2
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.h2.console.enabled=true
+## JACKSON TIME
+spring.jackson.time-zone: America/Sao_Paulo
+# ----- SPRING CONFIG ----- #
