--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ instagram.xpath.following = //*[@id="react-root"]/section/main/div/header/sectio
 instagram.xpath.followingListBoxOpen = //*[@id=\"react-root\"]/section/main/div/header/section/ul/li[3]/a
 instagram.xpath.followingListBox = //div[@class='isgrP']
 instagram.xpath.userDataFromFollowingListXPath = //div[@class='isgrP']//li[$]
+instagram.xpath.profileIcon = //*[@id="react-root"]/section/nav/div[2]/div/div/div[3]/div/div[5]
+instagram.xpath.profileIconExitButton = /html/body/div[1]/section/nav/div[2]/div/div/div[3]/div/div[5]/div[2]/div/div[2]/div[2]/div[2]/div/div/div/div/div/div
+instagram.xpath.profileIconProfileButton = /html/body/div[1]/section/nav/div[2]/div/div/div[3]/div/div[5]/div[2]/div/div[2]/div[2]/a[1]/div
 ## POST PAGE
 instagram.xpath.commentButton = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/button
 instagram.xpath.commentTextArea = //*[@id="react-root"]/section/main/div/div[1]/article/div[3]/section[3]/div/form/textarea
